# srun

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: release.yml
npm/: check-release-packages.js  check-release.js  postinstall.js  srun.js
src/: cli.rs  detect.rs  exec.rs  lib.rs  main.rs  manifest.rs  model.rs  resolve.rs
