[package]
name = "srun"
version = "0.1.0"
edition = "2021"
description = "Universal Smart Project Runner"
license = "MIT"

[[bin]]
name = "srun"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
